# algo-bot

./: .gitignore  pyproject.toml  requirements.txt  start.sh
src/: .env  INE062A01020.csv  INE238A01034.csv  README.MD  _config.py  access_token.txt  app.py  backtest.py  config.py  indicators.py  kite_service.py  logger_config.py  logging_config.json  lstm_model.h5  missed_trades.csv  orders.py  requirements.txt  routes.py  scoping.py  stop.sh  trader.py  trades.csv  utils.py
src/data/: ADANIENT.csv  ADANIPORTS.csv  ASIANPAINT.csv  AXISBANK.csv  BAJAJ-AUTO.csv  BAJAJFINSV.csv  BAJFINANCE.csv  BHARTIARTL.csv  BPCL.csv  BRITANNIA.csv  CIPLA.csv  COALINDIA.csv  DIVISLAB.csv  DRREDDY.csv  EICHERMOT.csv  GRASIM.csv  HCLTECH.csv  HDFCBANK.csv  HDFCLIFE.csv  HEROMOTOCO.csv  HINDALCO.csv  HINDUNILVR.csv  ICICIBANK.csv  INDUSINDBK.csv  INFY.csv  ITC.csv  JSWSTEEL.csv  KOTAKBANK.csv  LT.csv  M&M.csv  MARUTI.csv  NESTLEIND.csv  NTPC.csv  ONGC.csv  POWERGRID.csv  RELIANCE.csv  SBILIFE.csv  SBIN.csv  SUNPHARMA.csv  TATACONSUM.csv  (+10 more)
src/kite/: access_token.txt  kite_app.py  kite_service.py  nifty_data.json
src/llm/: _types.py  llm_chat.py  models.py
src/model/: LSTM_CodeTrading_1.ipynb
src/sentiment_analyzer/: news_sentiments.py
src/tests/: test.ipynb
src/training/: lstm_model.py
src/upstox/: INE238A01034.csv  access_token.txt  upstox_app.py  upstox_order_apis.py
src/utils/: util.py
